--- a/_posts/Language/C++/2021-08-23-(C++)기초 정리.md
+++ b/_posts/Language/C++/2021-08-23-(C++)기초 정리.md
@@ -1088,7 +1088,7 @@ int main() {
 
 <br>
 
-**<함수 중복의 모호성> - 3가지**
+**\<함수 중복의 모호성> - 3가지**
 
 1. 형 변환으로 인한 함수 중복의 모호성 => 모호한 호출, 컴파일 오류  
 3.0이 float이냐 double이냐? 문제없다 이건 그냥 더 큰 메모리에 넣으면 안전해서 double로 넣는다.  
