--- a/_posts/Language/C/2021-08-22-(C)Basic(기초문법).md
+++ b/_posts/Language/C/2021-08-22-(C)Basic(기초문법).md
@@ -50,7 +50,7 @@ typora-root-url: ../../..
 
 **printf와 scanf와 scanf_s가 있는데, scanf 사용시 MSVS 사용자들은?**
 
-* /#pragma warning(disable:4996) 넣어주면 됨.
+* `#pragma warning(disable:4996) ` 넣어주면 됨.
 
 <br>
 
@@ -71,43 +71,43 @@ typora-root-url: ../../..
 
 **참고) sizeof() 연산자 : 자료형의 크기 알 수 있다.**
 
-**<정수형 범위>**
+**\<정수형 범위>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image020.gif" />
 
 <br>
 
-**<이스케이프 문자>**
+**\<이스케이프 문자>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image022.gif" />
 
 <br>
 
-**<연산자 분류>**
+**\<연산자 분류>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image024.gif" />
 
 <br>
 
-**<switch문 주의할점> -> 정수와, 문자 하나만 가능!! (자바는 문자열도 가능)**
+**\<switch문 주의할점> -> 정수와, 문자 하나만 가능!! (자바는 문자열도 가능)**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image026.gif" />
 
 <br>
 
-**<do-while문>**
+**\<do-while문>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image028.gif" />
 
 <br>
 
-**<난수> srand()**
+**\<난수> srand()**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image030.gif" />
 
 <br>
 
-**<지역변수와 전역변수의 초기값의 차이점> - 정수는 전역 : 0, 지역 : 쓰레기값 이라는 차이점.**
+**\<지역변수와 전역변수의 초기값의 차이점> - 정수는 전역 : 0, 지역 : 쓰레기값 이라는 차이점.**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image032.gif" />
 
@@ -115,11 +115,11 @@ typora-root-url: ../../..
 
 <br>
 
-/- 전역변수는 프로그램 끝날때 까지 메모리에서 없어지지 않고 처음부터 바로 메모리에 들어가 있다. 
+- 전역변수는 프로그램 끝날때 까지 메모리에서 없어지지 않고 처음부터 바로 메모리에 들어가 있다. 
 
-/- 지역변수는 스택에 push/pop하는 것처럼 들어갔다가 사라진다.
+- 지역변수는 스택에 push/pop하는 것처럼 들어갔다가 사라진다.
 
-/- static은 지역변수 처럼 push해서 메모리 생겼는데 함수 끝나도 사라지지 않는다. 따라서 그다음 max()함수 실행시 int a = 0;인 초기화를 하지 않으며 바로 메모리로 가서 a가 2로 ++ 된다.
+- static은 지역변수 처럼 push해서 메모리 생겼는데 함수 끝나도 사라지지 않는다. 따라서 그다음 max()함수 실행시 int a = 0;인 초기화를 하지 않으며 바로 메모리로 가서 a가 2로 ++ 된다.
 
 <br>
 
@@ -133,31 +133,31 @@ typora-root-url: ../../..
 
 <br>
 
-**<파일 모드> File 모드**
+**\<파일 모드> File 모드**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image038.gif" />
 
 <br>
 
-**<파일 입출력 함수> - fgetc, fscanf 와 fputc, fprintf이다. 출력이 File에 출력한다는 말!!**
+**\<파일 입출력 함수> - fgetc, fscanf 와 fputc, fprintf이다. 출력이 File에 출력한다는 말!!**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image040.gif" />
 
 EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
-**<포인터의 간접 참조 연산자> - 변수선언 * 와 사용할때 * 의 차이점 구분.**
+**\<포인터의 간접 참조 연산자> - 변수선언 * 와 사용할때 * 의 차이점 구분.**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image042.gif" />
 
 <br>
 
-**<간점 참조 연산자와 증감 연산자>**
+**\<간접 참조 연산자와 증감 연산자>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image044.gif" />
 
 <br>
 
-**<구조체>**
+**\<구조체>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image046.gif" />
 
@@ -167,25 +167,25 @@ EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
 => 그래서 strcpy를 이용~!~!~!
 
-**<구조체 변수의 대입과 비교>**
+**\<구조체 변수의 대입과 비교>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image048.gif" />
 
 <br>
 
-**<구조체 배열>**
+**\<구조체 배열>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image050.gif" />
 
 <br>
 
-**<구조체를 가리키는 포인터>**
+**\<구조체를 가리키는 포인터>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image052.gif" />
 
 <br>
 
-**<정적 메모리 할당과 동적 메모리 할당>**
+**\<정적 메모리 할당과 동적 메모리 할당>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image054.gif" />
 
@@ -197,11 +197,11 @@ EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image056.gif" />
 
-<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image058.jpg)
+<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image058.jpg" />   
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image060.gif" />
 
-<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image062.jpg)
+<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image062.jpg"/> 
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image064.gif" />
 
@@ -217,11 +217,11 @@ EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image072.gif" />
 
-<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image074.jpg)
+<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image074.jpg"/> 
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image076.gif" />
 
-<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image078.jpg)
+<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image078.jpg"/> 
 
 <br><br>
 
@@ -263,7 +263,7 @@ EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
 <br>
 
-**<문자배열 초기화>**
+**\<문자배열 초기화>**
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image110.gif" />
 
@@ -375,11 +375,11 @@ EOF란? End Of File, 정수형으로 -1이며, File의 끝을 알려준다.
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image178.gif" />
 
-<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image180.jpg)
+<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image180.jpg"/> 
 
 <img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image182.gif" />
 
-<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image184.jpg)
+<img src="/images/2021-08-22-(C)Basic(기초문법)/clip_image184.jpg"/> 
 
  
 
