--- a/_posts/Major/Database/2022-06-22-DB 관계 데이터베이스, 대수, 해석(3).md
+++ b/_posts/Major/Database/2022-06-22-DB 관계 데이터베이스, 대수, 해석(3).md
@@ -13,7 +13,7 @@ sidebar:
 
 # 관계 데이터베이스
 
-**테이블들의 집합으로 표현한것이 관계 데이터베이스(RDB)  **  
+**테이블들의 집합으로 표현한것이 관계 데이터베이스(RDB)**  
 **RDBMS와 구분할 것!**
 
 **관계 데이터 모델**은 수학에서의 `릴레이션과 집합 이론`에 기초
@@ -115,7 +115,7 @@ sidebar:
 * `조인(⋈)(세타 조인)` : 세타(=연산기호)에 따른 조인(말 그대로 사용한 연산기호와 맞게 조인)
   * 동일 조인(=(열비교)), 자연 조인(=, 중복제거(열))
 
-* `디비전(÷)` :R÷S＝{ t | t∈ π<sub>D</sub>(R) ∧ t · s∈R  for all s∈S }
+* `디비전(÷)` : `R÷S＝{ t | t∈ π<sub>D</sub>(R) ∧ t · s∈R  for all s∈S }`
 
 <br>
 
