--- a/_posts/Major/Database/2022-08-25-DB SQL(4).md
+++ b/_posts/Major/Database/2022-08-25-DB SQL(4).md
@@ -546,7 +546,7 @@ FROM     HONOR WHERE   Dept = '컴퓨터';
 
 ### 뷰의 제거 예시
 
-DROP VIEW 뷰_이름 { RESTRICT | CASCADE };
+`DROP VIEW 뷰_이름 { RESTRICT | CASCADE };`
 
 * RESTRICT : 다른 곳에서 참조되고 있지 않는 한 데이터베이스에서 제거
 * CASCADE : 이 뷰가 사용된 다른 모든 뷰나 제약 조건이 함께 제거
