--- a/_posts/Major/Numerical_Analysis/2022-06-30-(Python)비선형 방정식 - 이분법, 뉴턴법, 할선법.md
+++ b/_posts/Major/Numerical_Analysis/2022-06-30-(Python)비선형 방정식 - 이분법, 뉴턴법, 할선법.md
@@ -100,11 +100,11 @@ typora-root-url: ../../..
 
   * 이때 𝑢와 𝑣는  𝑢𝑣  <  0을 만족(부호가 다르다는 것)  
 
-* 이 폐구간의  중점인  $𝑐 = \frac{1}{2}(a+b)$ 를 정하고, 𝑤 = 𝑓(𝑐)를 구한다.  
+* 이 폐구간의  중점인  \\(𝑐 = \frac{1}{2}(a+b)\\) 를 정하고, 𝑤 = 𝑓(𝑐)를 구한다.  
 
 * 우연히 𝑓(𝑐)=0이라면 알고리즘 종료 후 값 반환  
 
-* 보통은 𝑤  ≠  0,    𝑤𝑢  <  0 || 𝑤𝑣  <  0
+* 보통은 `𝑤  ≠  0,    𝑤𝑢  <  0 || 𝑤𝑣  <  0`
 
 
 * if 𝑤𝑢  <  0 ?
@@ -120,20 +120,20 @@ typora-root-url: ../../..
   * 그러나 𝑤𝑣  <  0이므로  [𝑐, 𝑏]에  𝑓의  근이  반드시  존재, 구간을  축소하여  계속 진행
 
 
-* 구간의 크기가 충분히 줄어들 때까지 반복 (ex) $|𝑏 − 𝑎| < \frac{1}{2} * 10^{-6}$
+* 구간의 크기가 충분히 줄어들 때까지 반복 (ex) \\(\|𝑏 − 𝑎\| < \frac{1}{2} * 10^{-6}\\)
 
   * 오차 범위 이내여야 한다고 보면 됨
 
-* 이때  가장 합리적인  근의 추정치 : $\frac{a+b}{2}$
+* 이때  가장 합리적인  근의 추정치 : \\(\frac{a+b}{2}\\)
 
 
 이분법의 수렴성 분석
 
-* 𝑓가 $[𝑎_0, 𝑏_0]$의 양 끝에서 서로 다른 부호의 함숫값을 갖는 연속함수.
+* 𝑓가 \\([𝑎_0, 𝑏_0]\\)의 양 끝에서 서로 다른 부호의 함숫값을 갖는 연속함수.
 
-* $[𝑎_0, 𝑏_0]$ 내에  한 근  𝑟이  존재
+* \\([𝑎_0, 𝑏_0]\\) 내에  한 근  𝑟이  존재
 
-* $c_0 = \frac{𝑎_0+𝑏_0}{2}$를 근 r의 근삿값으로 잡으면 $|r - c_0| ≤ \frac{b_0 - a_0}{2}$
+* \\(c_0 = \frac{𝑎_0+𝑏_0}{2}\\)를 근 r의 근삿값으로 잡으면 \\(\|r - c_0\| ≤ \frac{b_0 - a_0}{2}\\)
 
 
 
@@ -190,11 +190,11 @@ def Bisection(f,a,b,e,nmax):
 
 * 𝑓의  그래프  위의  한  점  (𝑥0, 𝑓(𝑥<sub>0</sub>))에  접선이  존재
 
-  * 접선  : $𝑙(𝑥) = 𝑓′(𝑥_0)(𝑥 − 𝑥_0) + 𝑓(𝑥_0)$
+  * 접선  : \\(𝑙(𝑥) = 𝑓′(𝑥_0)(𝑥 − 𝑥_0) + 𝑓(𝑥_0)\\)
 
 * 𝑓의  근에  대한  근사로  𝑙의  근을  선택
 
-* l의 근 : $ x_1 = x_0 - \frac{f(x_0)}{f'(x_0)} $ , $ x_2 = x_1 - \frac{f(x_1)}{f'(x_1)} $ , $ x_3 = x_2 - \frac{f(x_2)}{f'(x_2)}  ...  $
+* l의 근 : \\(x_1 = x_0 - \frac{f(x_0)}{f'(x_0)} \\), \\(x_2 = x_1 - \frac{f(x_1)}{f'(x_1)} $ , $ x_3 = x_2 - \frac{f(x_2)}{f'(x_2)}  ...\\)
 
 * 이러한  점들의  수열은  𝑓의 근으로  수렴
 
@@ -266,12 +266,12 @@ convergence at 5, x = -2.20203441176566, f(x) = -1.37349444519054e-15
 
 * 뉴턴법만큼  빠르게  근으로  수렴하면서, 쉽게  계산하는  방법
 
-  * 뉴턴법 : $x_{n+1} = x_n - \frac{f(x_n)}{f'(x_n)}$
+  * 뉴턴법 : \\(x_{n+1} = x_n - \frac{f(x_n)}{f'(x_n)}\\)
 
-  * $𝑓′(𝑥_𝑛)$ 을 쉽게 계산할  수 있는  근삿값으로  교체
+  * \\(𝑓′(𝑥_𝑛)\\) 을 쉽게 계산할  수 있는  근삿값으로  교체
 
 
-* 할선법 : $x_{n+1} = x_n - (\frac{x_n-x_{n-1}}{f(x_n)-f(x_{n-1})}) f(x_n) $
+* 할선법 : \\(x_{n+1} = x_n - (\frac{x_n-x_{n-1}}{f(x_n)-f(x_{n-1})}) f(x_n) \\)
 
 
 
