--- a/_posts/Major/Numerical_Analysis/2022-07-12-(Python)미분방정식 - 테일러 급수, 오일러의 방법, 룽게-쿠타 방법.md
+++ b/_posts/Major/Numerical_Analysis/2022-07-12-(Python)미분방정식 - 테일러 급수, 오일러의 방법, 룽게-쿠타 방법.md
@@ -109,9 +109,9 @@ typora-root-url: ../../..
 
 일반해
 
-* $x(t) = ce^t - 1$
+* \\(x(t) = ce^t - 1\\)
 
-* $x(t) = 3t^2 - t + c$
+* \\(x(t) = 3t^2 - t + c\\)
 
 
 
@@ -125,8 +125,8 @@ typora-root-url: ../../..
 
 특수해
 
-* $x = e^t - 1$
-* $x = 3t^2 - t + 4$
+* \\(x = e^t - 1\\)
+* \\(x = 3t^2 - t + 4\\)
 
 <br>
 
@@ -135,7 +135,7 @@ typora-root-url: ../../..
 
 * 테일러 급수의 공식에서 앞에 2개의 항을 이용한 방법이다.
 
-* $x(t+h) = x(t) + hx'(t)$
+* \\(x(t+h) = x(t) + hx'(t)\\)
 
 
 예시로 오일러 방법 사용해서 초기값이 `x(1) = -4`인 미분방정식 `x' = 1 + x^2 + t^3`에 대한  
@@ -215,7 +215,7 @@ plt.show()
 
 * 오일러랑 동일한데 미분 안하고 미분방정식을 해결한다는게 큰 특징이다.
 
-* $x(t+h) = x(t) + \frac{1}{6}(K_1 + 2K_2 + 2K_3 + K_4)$
+* \\(x(t+h) = x(t) + \frac{1}{6}(K_1 + 2K_2 + 2K_3 + K_4)\\)
 
 * K공식은 생략.. 아래 함수에 구현되어 있으므로 참고
 
