--- a/_posts/Major/Programming_Language/2022-06-21-PL 구문법(2).md
+++ b/_posts/Major/Programming_Language/2022-06-21-PL 구문법(2).md
@@ -21,7 +21,7 @@ sidebar:
 
 * x : 문자 x를 나타냄
 
-* M | N : M 또는 N을 표현
+* M \| N : M 또는 N을 표현
 
 * MN : M 다음에 N이 나타나는 접합을 표현
 * M<sup>*</sup> : M이 0번 이상 반복
@@ -31,9 +31,9 @@ sidebar:
 
 * [..] : 문자 집합을 나타냄
   * 예시
-  * [aeiou] = a|e|i|o|u
-  * [A-Z] = A|\~\~|Z
-  * [0-9] = 0|1|~~|9 
+  * `[aeiou] = a|e|i|o|u`
+  * `[A-Z] = A|\~\~|Z`
+  * `[0-9] = 0|1|~~|9`
 
 <br><br>
 
