--- a/_posts/Web&JavaScript/CSS/2022-08-01-프로젝트에서 사용한 스타일링.md
+++ b/_posts/Web&JavaScript/CSS/2022-08-01-프로젝트에서 사용한 스타일링.md
@@ -1,5 +1,5 @@
 ---
-title:  "[css]다양한 UI 스타일링"
+title:  "[css]프로젝트에서 사용한 스타일링"
 categories : Css
 tag : [css]
 toc: true
@@ -21,6 +21,12 @@ typora-root-url: ../../..
 * 참고로 [bootstrap](https://getbootstrap.com/), [tailwind](https://tailwindcss.com/) 라는 유용한 CSS 프레임워크가 있으므로 참고!
   * bootstrap은 반응형에 좋으며, tailwind는 가벼워서 좋다.
 * 또한 [codepen](https://codepen.io/) 라는 다른사람들이 UI 스타일링한 CSS 코드를 공유한 사이트도 유용하다.
+
+<br>
+
+**다음부터 볼 내용들은 개인 프로젝트에서 정말 간단한 쇼핑몰을 만든게 있는데,**
+
+**이곳에 사용한 스타일링을 기록해본다.**
 
 <br>
 
