--- a/_posts/Major/Programming_Language/2022-08-21-PL 의미론(3).md
+++ b/_posts/Major/Programming_Language/2022-08-21-PL 의미론(3).md
@@ -43,10 +43,10 @@ sidebar:
 
 * **좌결합** : 왼쪽부터 우선 결합하는 규칙(대부분 이항 연산자)
   
-  * **좌순환 규칙** : E->E-T|T  앞의 E가 재귀 즉, 왼쪽 서브트리가 더 깊고 먼저 연산되는 것.
+  * **좌순환 규칙** : `E->E-T|T`  앞의 E가 재귀 즉, 왼쪽 서브트리가 더 깊고 먼저 연산되는 것.
   
 * **우결합** : 오른쪽부터 우선 결합하는 규칙(대부분 단항, 대입 연산자)
-  * **우순환 규칙** : !E|id|...  뒤의 E가 재귀 즉, 오른쪽 서브트리가 더 깊고 먼저 연산되는 것.
+  * **우순환 규칙** : `!E|id|...`  뒤의 E가 재귀 즉, 오른쪽 서브트리가 더 깊고 먼저 연산되는 것.
 
   
 
