docs: 프로그래머스 문제 풀이 - 카카오

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -1178,6 +1178,20 @@ public static int chk() {
   * 10진수를 기수 B로 계속 나누어서 나머지 값을 거꾸로 출력하는 방식이다.
   * **그림으로 참고(추천 URL) : [10진수 A,B 진법 관계](https://piyoro.github.io/program/221770535071/)**
 
+```java
+/* 코드참고 */
+// 2진법 -> 10진법
+for (int i = m-1; i >= 0; i--) { // input의 끝자리부터 접근
+    result += input[i] * pow(2, j++); // j는 0부터 -> 2^0 + 2^1 + 2^2 + ...
+}
+// 10진법 -> 2진법
+while(num != 0) {
+    res=num%2;
+    num/=2;
+    st.add(res); // st는 스택
+}        
+```
+
 <br>
 
 ### 6. 곱의법칙
@@ -1700,15 +1714,62 @@ static void bfs(int root) {
 
 <br>
 
-### 3. 이진 트리의 순회
+### 3. 이진 트리의 순회 + 분할정복
+
+**이진트리로 순회했을때 값이 필요할 경우에 사용 (즉, 순회한 값을 모를때)**
 
 * **레벨 순회(=bfs(root))** : 높이 순서대로 방문한다.
   * 기존이랑 **동일**. root를 시작점으로 **bfs** 돌리면 높이 순서대로 위에서부터 차례로 순회한다.
 * **전위, 중위, 후위 순회**
   * 전위 : 위 -> 왼 -> 오
   * 중위 : 왼 -> 위 -> 오
+    * 특히 왼쪽에서 오른쪽으로 차례대로 순서를 정한것과 같다.
   * 후위 : 왼 -> 오 -> 위
-* **구현 쉬워서 코드 생략**
+* **순회는 구현 쉬워서 코드 생략**
+
+<br>
+
+**분할정복 코드**
+
+* 아래 코드는 프로그래머스 문제중 이진트리판별 문제인데,
+* `루트노드가 0일땐 서브트리 노드들도 모두 0` 이어야 하는 **특별한 조건**을 넣은 상태
+  * **문제에서 준 조건일 뿐 실제로 이진트리가 이렇다는건 아니다.**
+* `트리 -> 분할정복 -> 루트위주 연산` 이부분을 꼭 기억하자.
+
+```java
+/* 분할정복 예시 코드 - isBinaryTree() 시작 가정 */
+// 
+public Boolean isBinaryTree(String binary) {
+    // base condition
+    if(binary.length()==0) return true; // leaf 노드에서의 재귀므로 end지점
+
+    int root = binary.length()/2; // 이진트리의 루트노드 찾는 간단한 방식
+    String left = binary.substring(0, root);
+    String right = binary.substring(root+1);
+    if(binary.charAt(root) == '0') { // 루트 노드가 0이라면 서브 트리도 모두 0
+        return isZeroTree(left) && isZeroTree(right);
+    }
+    else { // 루트 노드가 1이라면 서브 트리 검사
+        return isBinaryTree(left) && isBinaryTree(right);
+    }
+
+}
+
+public Boolean isZeroTree(String binary) {
+    // base condition
+    if(binary.length()==0) return true;
+
+    int root = binary.length()/2;
+    String left = binary.substring(0, root);
+    String right = binary.substring(root+1);
+    if (binary.charAt(root) == '1') { // 루트 노드가 1이라면 실패
+        return false;
+    }
+    else { // 루트 노드가 0이라면 서브트리 계속 확인
+        return isZeroTree(left) && isZeroTree(right);    
+    }
+}
+```
 
 <br>
 
