--- a/_posts/Major/Algorithm_Concept/2022-12-28-(개념) Sort(정렬).md
+++ b/_posts/Major/Algorithm_Concept/2022-12-28-(개념) Sort(정렬).md
@@ -41,7 +41,7 @@ typora-root-url: ../../..
 
 **코드를 바로 보고 해석해서 비교하는게 더 간단할 것이다.**
 
-![image-20221228003613812](C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228003613812.png)
+![image-20221228003613812](/images\2022-12-28-(개념) Sort(정렬)\image-20221228003613812.png)
 
 * **순서 : 삽입(좌측상단), 버블(우측상단), 선택(좌측하단), 교환(우측하단)**
   * **삽입정렬** : 앞에서부터 하나씩 삽입하면서 삽입된것들 비교해가며 자기 자리를 찾아가는 구조  
@@ -60,7 +60,7 @@ typora-root-url: ../../..
 
 ## Radix, Bucket, Counting, Shell Sort
 
-<img src="C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228005521187.png" alt="image-20221228005521187" style="zoom:80%;" />
+<img src="/images\2022-12-28-(개념) Sort(정렬)\image-20221228005521187.png" alt="image-20221228005521187" style="zoom:80%;" />
 
 * 맨 끝자리 기준으로 순서대로 통에 나눠 적고, 0번 통부터 다시 순서대로 배열 정리(끝자리 정렬)  
   그다음은 10자리 기준으로 반복(십의자리 정렬), 그다음은 100자리 기준으로 반복(전체 정렬 끝)
@@ -69,13 +69,13 @@ typora-root-url: ../../..
 
 <br>
 
-<img src="C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228005612383.png" alt="image-20221228005612383" style="zoom:80%;" />
+<img src="/images\2022-12-28-(개념) Sort(정렬)\image-20221228005612383.png" alt="image-20221228005612383" style="zoom:80%;" />
 
 * 버킷들 각각이 알아서 정렬 후 이를 합하게 되는점이 기수(Radix)와의 차이점이다.
 
 <br>
 
-<img src="C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228005652439.png" alt="image-20221228005652439" style="zoom:80%;" />
+<img src="/images\2022-12-28-(개념) Sort(정렬)\image-20221228005652439.png" alt="image-20221228005652439" style="zoom:80%;" />
 
 * 어떤 특정수 입장에서 나보다 작은게 몇개 있다라는걸 미리 구하는것
   * 따라서 주어진 입력이 얼만지 모르는 그런경우는 미리 카운트를 구해두질 못하니까 사용불가
@@ -83,7 +83,7 @@ typora-root-url: ../../..
 
 <br>
 
-<img src="C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228005744571.png" alt="image-20221228005744571" style="zoom:80%;" />
+<img src="/images\2022-12-28-(개념) Sort(정렬)\image-20221228005744571.png" alt="image-20221228005744571" style="zoom:80%;" />
 
 * 비교간격(Gap)을 큰 것 -> 점차 작은 것으로 변환하여 서로 떨어진 수를 swap
   * Gap이 3과 1인 상태를 수행하는 모습을 그림에서 볼 수 있음
@@ -102,7 +102,7 @@ typora-root-url: ../../..
 
 * 두 배열 차례로 비교해서 더 큰 숫자를 새 배열에 넣는 식이고, 나중에 배열 하나가 먼저 비면 남은 배열꺼를 다넣음
 
-![image-20221228013515160](C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228013515160.png)
+![image-20221228013515160](/images\2022-12-28-(개념) Sort(정렬)\image-20221228013515160.png)
 
 <br>
 
@@ -116,7 +116,7 @@ typora-root-url: ../../..
   * U, V는 절반으로 나눈 2개 배열
   * h, m은 U, V의 크기
 
-![image-20221228013806406](C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228013806406.png)
+![image-20221228013806406](/images\2022-12-28-(개념) Sort(정렬)\image-20221228013806406.png)
 
 * 참고로 오른쪽에 공간을 나타낸것을 보면, 추가로 2n만큼 메모리 공간이 더 필요한 것이 핵심
   * 이는 제자리 정렬은 아니라는 의미
@@ -128,13 +128,13 @@ typora-root-url: ../../..
 
 **값을 복사하지않고 index만 가지고 해결**
 
-![image-20221228014119597](C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228014119597.png)
+![image-20221228014119597](/images\2022-12-28-(개념) Sort(정렬)\image-20221228014119597.png)
 
 * **변형된 Mergesort 함수**
 
 <br>
 
-![image-20221228014154035](C:\Users\KoBongHun\Desktop\Git\BH946.github.io\images\2022-12-28-(개념) Sort(정렬)\image-20221228014154035.png)
+![image-20221228014154035](/images\2022-12-28-(개념) Sort(정렬)\image-20221228014154035.png)
 
 * **변형된 Merge 함수**
   * 여기선 줄그은 부분이 기존에서 변형된 코드 부분
