--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -856,6 +856,7 @@ visited[maxNode] = false; // backtracking
 * **존나 풀어라 : [구현(실버급 인기 순)](https://solved.ac/search?query=%23implementation+*s&sort=solved&direction=desc&page=1)**
 * **자주 나오는 로직은 그냥 외우자**
   * 예로 2차원 배열 회전 로직은 `B[x][y]=A[N-1-y][x]`
+  * 단 x,y가 0부터 시작 -> N-1, M-1은 끝자리 의미
 
 ```java
 // 90도 회전 함수 => ccw(반시계)
@@ -870,8 +871,9 @@ public static void rotate() {
 	// 2. 배열요소 swap
 	for (int i = 0; i < N; i++) { 
 		for (int j = 0; j < M; j++) {
-            // CW : B[x][y]=A[y][M-1-x]
-            // CCW : B[x][y]=A[N-1-y][x]
+            // CW : B[x][y]=A[N-1-y][x]
+            // CCW : B[x][y]=A[y][M-1-x]
+            // 180도 : B[x][y]=A[N-1-x][M-1-y]
 			inArr[i][j] = tmp[N-1-j][i];
 		}
 	}
