docs: ssafy 사전학습 중 알고풀이

--- a/_posts/Coding_Test/SWEA_Test/2023-01-01-(java)두 개의 숫자열 - SWEA 1959.md
+++ b/_posts/Coding_Test/SWEA_Test/2023-01-01-(java)두 개의 숫자열 - SWEA 1959.md
@@ -12,27 +12,23 @@ typora-root-url: ../../..
 
 
 
-## 문제
-
-* **[한윤정이 이탈리아에 가서 아이스크림을 사먹는데(백준2422)](https://www.acmicpc.net/problem/2422)**
-
-<br><br>
-
 ## 풀이
 
 **문제 해석을 하자면,**
 
-* 간단하니 읽어보기
+* 마주본 두개의 문자열의 곱의 합이 제일 큰 값을 도출하라
 
 
 <br>
 
 **풀이**
 
-* `inArr[200][10000]` 로 해도 2백만이라 메모리 괜찮을것임
-* 깊이 3을 base condition 으로 생각하고 **브루트포스**로 풀어보자
-* 주의할점
-  * `inArr[a].add(b); inArr[b].add(a);` 둘다 기록해야 반례없음
+* 숫자열은 연속되어 있다.
+* 더 짧은 숫자열이 A라 가정하면, B의 처음부터 끝자리까지 움직이면서 최대값을 구하자
+  * 물론, A와 B가 숫자열이 같을수도 있으니 이러한 상황도 전부 고려하자
+  * Index만 잘 계산해주면 되는 문제이다.
+
+* 예상 복잡도는 O(NM)
 
 
 <br><br>
@@ -40,56 +36,60 @@ typora-root-url: ../../..
 ## 코드
 
 ```java
-static List<Integer>[] inArr = new ArrayList[200];
-static int[] outArr = new int[4];
-static int N, M, result;
+import java.io.*;
+import java.util.*;
+public class 두개의숫자열_1959 {
+  public static long[] A = new long[22];
+  public static long[] B = new long[22];
 
-static void dfs(int depth, int idx) {
-    // base condition
-    if(depth == 3) {
-        result++;
-        return;
-    }
-    // recursion
-    for(int i = idx+1; i<=N; i++) {
-        int check = 0;
-        for(int j = 0; j<depth; j++) {
-            int num = outArr[j];
-            for(int k = 0; k<inArr[num].size(); k++) {
-                if(inArr[num].get(k) == i) {
-                    check = 1; // 중복 발견..
-                }
-            }
-            if(check ==1) break;
-        }
-        if(check == 1) continue;
-        outArr[depth] = i;
-        dfs(depth+1, i);
-    }
-}
-
-public static Integer solve() {
-    for(int i = 1; i<=N; i++) {
-        outArr[0] = i;
-        dfs(1, i);
-    }
-    return result;
-}
-
-public static void main(String[] args) throws IOException {
+  public static void main(String[] args) throws Exception {
     BufferedReader br = new BufferedReader(new InputStreamReader(System.in));
-    StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
-    N = Integer.parseInt(stk.nextToken());
-    M = Integer.parseInt(stk.nextToken());
-    for(int i=1 ; i<=N; i++) inArr[i] = new ArrayList<>(); // init
-    for(int i=0; i<M; i++) {
-        stk = new StringTokenizer(br.readLine(), " ");
-        int a = Integer.parseInt(stk.nextToken());
-        int b = Integer.parseInt(stk.nextToken());
-        inArr[a].add(b);
-        inArr[b].add(a);
+    StringBuilder sb = new StringBuilder();
+    int T = Integer.parseInt(br.readLine());
+    for(int t=1; t<=T; t++) {
+      //init
+      for(int i=0; i<22; i++) {
+        A[i] = 0;
+        B[i] = 0;
+      }
+      //input
+      StringTokenizer stk = new StringTokenizer(br.readLine(), " ");
+      int N = Integer.parseInt(stk.nextToken());
+      int M = Integer.parseInt(stk.nextToken());
+      stk = new StringTokenizer(br.readLine(), " ");
+      for(int i=0; i<N; i++)  A[i]=Integer.parseInt(stk.nextToken());
+      stk = new StringTokenizer(br.readLine(), " ");
+      for(int i=0; i<M; i++)  B[i]=Integer.parseInt(stk.nextToken());
+      //run
+      long result = 0;
+      if(N<=M) { // N<M 과 N==M
+        int copyN = N;
+        do { // M-N==0 도 계산위해 do-while 사용
+          long temp = 0;
+          int diff = M-copyN;
+          for(int i=0; i<N; i++) {
+            temp += A[i]*B[diff+i]; // calculate
+          }
+          result = Math.max(result, temp);
+          copyN++;
+        }while(M-copyN!=-1);
+      } else { // N>M
+        int copyM = M;
+        while(N-copyM!=-1) {
+          long temp = 0;
+          int diff = N-copyM;
+          for(int i=0; i<M; i++) {
+            temp += A[diff+i]*B[i]; // calculate
+          }
+          result = Math.max(result, temp);
+          copyM++;
+        }
+      }
+      //output
+      sb.append("#"+t+" "+result+"\n");
     }
-    System.out.println(solve());
+    System.out.print(sb);
+  }
 }
 ```
 
