docs: 알고리즘 풀이 및 템플릿 수정

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -827,6 +827,38 @@ visited[maxNode] = false; // backtracking
 
 <img src="https://github.com/BH946/spring-second-roadmap/assets/80165014/733a4064-c832-4501-863c-e585b061b768" alt="image" style="zoom:33%;" /> 
 
+<br>
+
+**창용 마을 무리의 개수 - SWEA 7465(사고력 확장)**
+
+```java
+/*
+dfs를 보면 매우 간단한 로직이며, 위 문제처럼 기저조건은 visited로 해결이다.
+단, 여기서 포인트는 "방문체크와 result++" 부분이다.
+*/
+public static void dfs(int idx, boolean[] visited, List<Integer>[] inArr) {
+    // base condition -> visited
+    List<Integer> inNum = inArr[idx];
+    for(int num : inNum) {
+        if(visited[num]) continue; // 방문체크(1)
+        visited[num] = true;
+        dfs(num, visited, inArr);
+    }
+}
+// 아래는 main 함수 내부
+//run
+for(int i=1; i<=N; i++) {
+    if(visited[i]) continue; // 방문체크(2)
+    dfs(i, visited, inArr);
+    result++; // 이곳까지 오면 무리 1개 추가된 것(가지1개 추가)
+}
+
+```
+
+**트리를 그려보았다.**
+
+<img src="https://github.com/BH946/bh946.github.io/assets/80165014/647e07f6-9bb9-447e-bc31-617aefaff675" alt="image" style="zoom: 50%;" /> 
+
 <br><br>
 
 ## Branch-and-Bound(분기한정법)
