--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -364,18 +364,33 @@ Arrays.copyOfRange(원본배열, 시작, 끝); // 배열의 경우
 
 <br><br>
 
-## BFS, DFS
+## BFS, DFS -> 최단거리는 꼭 "BFS"!!
 
 **BFS(넢이우선검색), DFS(깊이우선검색)은 정말 단골 문제들이다.** 
 
+**아래 내용은 무조건 반복해서 머리속에 집어넣자**
+
 * **BFS를 우선**으로 사용하며, DFS는 DFS로만 풀리는 문제에 사용하면 된다.
   * **BFS는 큐** 를 활용하고, **DFS는 스택 또는 재귀(필자는 주로 재귀)**를 활용한다.
-
 * **주의할점은 BFS는 방문기록을 큐에 집어넣는 시점에 남겨야 한다.**
 * **또한, "거리가 일정" 할때는 "BFS" 로 "최단거리" 를 구할 수 있는데 이때 DP의 개념이 포함된다.**
-  * BFS 특성상 "큐" 를 통해서 레벨(높이)순으로 접근하기 때문에 최적의 거리(dist 배열)를 항상 기록하므로 DP처럼 최적의 값으로 배열을 채워나간다는 점이 동일하다.
+  * BFS 특성상 "큐" 를 통해서 **레벨(높이)순**으로 접근하기 때문에 최적의 거리(**dist 배열**)를 항상 기록하므로 DP처럼 최적의 값으로 배열을 채워나간다는 점이 동일하다.
   * DP배열이 1차원, 2차원인지 연습하기 좋은 문제를 소개한다.
     * [숨바꼭질4_BOJ13913](https://www.acmicpc.net/problem/13913), [이모티콘_BOJ14226](https://www.acmicpc.net/problem/14226)
+  * 참고로 **dist배열의** 경우 **거리들을 전부 기록해둘 필요가 있을때** 사용하기 좋다.
+* **단, "거리일정"과 ""최단거리"에서 조건들이 있을때 "돌아서 다른경로로"가는게 더 빠른 문제들도 있다.**
+  * "경로의 특징을 저장해둬야 하는 문제" 이런건 DFS가 더 좋다.
+  * 다만, 여기선 **"최단거리"** 이기 때문에 BFS로 풀만한 문제들만 나올것이다.
+  * **결론은 이때 큐 사이즈만큼 반복해 구분지어 레벨(높이)를 구하자. -> 레벨=최단거리**
+    * 코드는 아래쪽에서 확인!!
+      * **참고로 바로 아래코드인 `resultTemp++;` 은 너비 구함 -> 높이(레벨) 아님!**
+
+    * 단, "**조건에 걸려 대기**"하는 곳에선 큐에 **다시 삽입**해야한다. **(중요)**
+    * 어차피 "**거리는 일정**" 하기(ex:1초씩) 때문이다.
+    * 당연한 얘기지만 **visit**도 해야 "최단거리"가 도출 될 것이다.(내생각)
+
+  * 예시 문제 : SWEA : 4193. 수영대회 결승전
+  * 참고 : [나와 같은 고찰을 느낀 다른분](https://velog.io/@tsi0521/%EB%AF%B8%EB%A1%9C-%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-DFS-%EC%99%80-BFS-%EB%B9%84%EA%B5%90)
 
 
 <br>
@@ -402,7 +417,7 @@ public class test {
         while(!qu.isEmpty()) {
             int cx = qu.peek().first; // front
             int cy = qu.peek().second;
-            resultTemp++;
+            resultTemp++; // 너비 구함 -> 높이(레벨) 아님
             qu.remove(); // pop
 
             for (int i=0; i<4; i++){
@@ -585,6 +600,54 @@ public class Main {
 
 * dx,dy 배열을 통해서 `for(int i=0; i<4; i++)`에서 `nx, ny` 를 구하는 것이, 
 * 꼭 4방향이 아니라 필요에따라 `for (auto nx : inArr[cx])` 형태로 다른 요소들의 접근으로 바뀐다던지 이런식으로도 응용한다는 것이다.
+
+<br>
+
+**너비가 아닌 "레벨(높이)" 구하는 BFS**
+
+```java
+// bfs 종료하게 되면 level의 값은 반드시 최단 경로의 길이가 되는 것!
+// 이동에 제약이 생기면 자기자신을 "큐에 추가" -> 이 또한 핵심!
+level = 0;
+while(!qu.isEmpty()) {
+    int size = qu.size();
+    for(int s = 0; s < size; s++) { // "이게 핵심"
+        int cx = qu.peek().x;
+        int cy = qu.peek().y;
+        qu.remove();
+        // 종료 시점
+        if (cx==tX && cy==tY) return; // 반드시 최단 경로 (bfs 특성)
+
+        for(int i=0; i<4; i++) {
+            int nx = cx + dx[i];
+            int ny = cy + dy[i];
+            // 범위 & 방문 체크
+            if (nx < 0 || ny < 0 || nx >= N || ny >= N) continue;
+            if (visited[nx][ny]) continue;
+            // 이동 가능여부 체크(섬, 소용돌이 등)
+            int move = moveCheck(nx, ny, result);
+            // => 0: 섬, 1: 이동, 2: 소용돌이
+            if(move == 0) continue;
+            else if(move == 1) {
+                qu.add(new Pair(nx, ny));
+                visited[nx][ny] = true;
+            }
+            else if(move == 2) {
+                qu.add(new Pair(cx, cy)); // 자기자신을 추가 (대기하는 경로로 빠지는 것)
+            }
+            else {
+                System.out.println("예상치 못한 error");
+            }
+        }
+    }
+    level++; // level
+}
+level = -1; // 도착지 이동 실패시 -1 출력
+```
+
+**그림(트리)을 그려보았다.**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/e85fd36e-48b9-41d1-b944-fe80e49612ab) 
 
 <br>
 
