docs: 템플릿 수정

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -378,20 +378,20 @@ Arrays.copyOfRange(원본배열, 시작, 끝); // 배열의 경우
   * DP배열이 1차원, 2차원인지 연습하기 좋은 문제를 소개한다.
     * [숨바꼭질4_BOJ13913](https://www.acmicpc.net/problem/13913), [이모티콘_BOJ14226](https://www.acmicpc.net/problem/14226)
   * 참고로 **dist배열의** 경우 **거리들을 전부 기록해둘 필요가 있을때** 사용하기 좋다.
-* **단, "거리일정"과 ""최단거리"에서 조건들이 있을때 "돌아서 다른경로로"가는게 더 빠른 문제들도 있다.**
+* **단, "거리일정"과 "최단거리"에서 조건들이 있을때 "돌아서 다른경로로"가는게 더 빠른 문제들도 있다.**
   * "경로의 특징을 저장해둬야 하는 문제" 이런건 DFS가 더 좋다.
+    * 예로 outArr[depth] 에 기록했던것 처럼..
   * 다만, 여기선 **"최단거리"** 이기 때문에 BFS로 풀만한 문제들만 나올것이다.
   * **결론은 이때 큐 사이즈만큼 반복해 구분지어 레벨(높이)를 구하자. -> 레벨=최단거리**
     * 코드는 아래쪽에서 확인!!
       * **참고로 바로 아래코드인 `resultTemp++;` 은 너비 구함 -> 높이(레벨) 아님!**
-
+      * **또한, p.dist 처럼 "기록"해서 최소비용 갱신하는 로직도 확인(아래에 코드)**
+      
     * 단, "**조건에 걸려 대기**"하는 곳에선 큐에 **다시 삽입**해야한다. **(중요)**
     * 어차피 "**거리는 일정**" 하기(ex:1초씩) 때문이다.
     * 당연한 얘기지만 **visit**도 해야 "최단거리"가 도출 될 것이다.(내생각)
-
   * 예시 문제 : SWEA : 4193. 수영대회 결승전
   * 참고 : [나와 같은 고찰을 느낀 다른분](https://velog.io/@tsi0521/%EB%AF%B8%EB%A1%9C-%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-DFS-%EC%99%80-BFS-%EB%B9%84%EA%B5%90)
-
 
 <br>
 
@@ -647,7 +647,45 @@ level = -1; // 도착지 이동 실패시 -1 출력
 
 **그림(트리)을 그려보았다.**
 
+- **자기자신을 넣는 "큐에 삽입 시점"도 중요**
+
 ![image](https://github.com/BH946/bh946.github.io/assets/80165014/e85fd36e-48b9-41d1-b944-fe80e49612ab) 
+
+<br>
+
+**p.dist 같이 좌표 말고도 기록하는 BFS**
+
+```java
+public static void bfs(int cx, int cy, int N) {
+    Queue<Pair> qu = new LinkedList<>();
+    qu.add(new Pair(cx,cy,0)); // dist : 0
+    dpArr[cx][cy] = inArr[cx][cy]; //init
+
+    while(!qu.isEmpty()) {
+        Pair p = qu.peek();
+        qu.remove();
+        //if(cx==N-1 && cy==N-1) return; // 종료시점 필요X
+
+        for(int i=0; i<4; i++) {
+            int nx = dx[i] + p.x;
+            int ny = dy[i] + p.y;
+            if(nx<0||ny<0||nx>=N||ny>=N) continue;
+            if(dpArr[nx][ny]==-1 || dpArr[nx][ny]>p.dist+inArr[nx][ny]) {
+                //visited true // 필요X
+                qu.add(new Pair(nx, ny, p.dist+inArr[nx][ny]));
+                dpArr[nx][ny] = p.dist+inArr[nx][ny]; // update
+            }
+        }
+    }
+}
+```
+
+**트리를 그려보았다.**
+
+- 거리를 비용으로 보면 된다 -> 실제 문제에서는 각기 다른 비용을 제공
+- **"큐 삽입 시점" 이 제일 핵심**
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/1ab2c5fb-9f4d-477d-bbe2-b78fb5ac0544) 
 
 <br>
 
