--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -50,7 +50,7 @@ typora-root-url: ../../..
 
 <br>
 
-**자주 나오는 로직은 그냥 외우자**
+**자주 나오는 로직은 그냥 외우자 -> "시뮬레이션"**
 
 * EX1) 2차원 **배열 회전 로직**은 `B[x][y]=A[N-1-y][x]`
   * 단 x,y가 0부터 시작 -> N-1, M-1은 끝자리 의미
@@ -58,6 +58,9 @@ typora-root-url: ../../..
 * EX2) **투포인터**의 개념을 잘 생각 -> 두개의 배열을 인덱스 따로 하여 따로 동작하고 싶을때도 있기에 이 개념을 기억해두자
 * EX3) **배열의 인덱스를 실제 숫자**로 치환하여 생각하는 방식 -> 숫자 빈도수 구하거나 등등...
 * EX4) **dx, dy**로 1칸씩 같던 것을 **끝까지 이동**하는것 -> dx, dy를 좌표에 더할수록 해당 방향으로 계속 이동 가능하단 점을 알아두자
+* EX5) 보통 "시뮬레이션"은 복잡도가 높지않아 **배열 상태 매번 새로 복제** 잘 고려 -> 한번씩 이런 사소한 할당에서 문제가 발생
+  * `int[][] backup = new int[10][10];`
+  * 이후에 backtracking 에 사용할 수도 있으니 이런 복제도 잘 고려
 
 <br>
 
@@ -1102,6 +1105,18 @@ for(int i=1; i<=N; i++) {
 
 <img src="https://github.com/BH946/bh946.github.io/assets/80165014/647e07f6-9bb9-447e-bc31-617aefaff675" alt="image" style="zoom: 33%;" /> 
 
+<br>
+
+**(재귀 사고력 확장) 감시_15683 -> 백준**
+
+```java
+코드는... 생략
+```
+
+**트리를 참고해보자**
+
+-> 주말에 사진!! 코드도 함께!!
+
 <br><br>
 
 ## Branch-and-Bound(분기한정법)
@@ -1136,6 +1151,9 @@ for(int i=1; i<=N; i++) {
   * EX2) **투포인터**의 개념을 잘 생각 -> 두개의 배열을 인덱스 따로 하여 따로 동작하고 싶을때도 있기에 이 개념을 기억해두자
   * EX3) **배열의 인덱스를 실제 숫자**로 치환하여 생각하는 방식 -> 숫자 빈도수 구하거나 등등...
   * EX4) **dx, dy**로 1칸씩 같던 것을 **끝까지 이동**하는것 -> dx, dy를 좌표에 더할수록 해당 방향으로 계속 이동 가능하단 점을 알아두자
+  * EX5) 보통 "시뮬레이션"은 복잡도가 높지않아 **배열 상태 매번 새로 복제** 잘 고려 -> 한번씩 이런 사소한 할당에서 문제가 발생
+    * `int[][] backup = new int[10][10];`
+    * 이후에 backtracking 에 사용할 수도 있으니 이런 복제도 잘 고려
 
 ```java
 // 90도 회전 함수 => ccw(반시계)
