docs: 알고템플릿 수정

--- a/_posts/Coding_Test/Baekjoon_Test/2024-01-24-(java)드래곤 커브 - 백준15685.md
+++ b/_posts/Coding_Test/Baekjoon_Test/2024-01-24-(java)드래곤 커브 - 백준15685.md
@@ -42,10 +42,9 @@ typora-root-url: ../../..
 
   * (2) 사각형 찾기(꼭짓점 체크) -> 네개씩 체크만 하면되어서 매우 간단
 
-
 **그림 참고**
 
-
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/9ee40c23-4fce-4b2f-8460-61852a704d1d) 
 
 
 <br><br>
