--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -47,6 +47,9 @@ typora-root-url: ../../..
   - 백트래킹은 따로 BFS에서 구현 안해봤기에 DFS(재귀)로 꼭 구현하자
 - 복잡도?? 너무 크거나 나머지 상황은 DP, 그리디 등으로 접근
   - **DP 여러가지 유형** 미리 익숙해두자
+- 아래 **자료구조** 정도는 기억해두고 필요한지 판단해서 사용하자
+  - 스택&큐&덱, 이분탐색, 해시맵, 우선순위 큐
+
 
 <br>
 
@@ -1109,13 +1112,80 @@ for(int i=1; i<=N; i++) {
 
 **(재귀 사고력 확장) 감시_15683 -> 백준**
 
+- cal 함수는 dfs가 너무 길어질거같아서 빼낸 함수일 뿐이지 dfs 내부로직으로 보면 된다.
+- 백트래킹을 "2차원 배열"인 점이 인상깊다.
+
 ```java
-코드는... 생략
+// dArr[p.cctv][d] -> 총 cctv5개 가지는 문제
+static int[] dArr1 = {0,1,2,3};
+static int[][] dArr2 = {{2,0},{3,1}}; // {왼,오}, {위,아}
+static int[][] dArr3 = {{3,0},{0,1},{2,1},{2,3}}; // {위,오}, {오,아}, {왼,아}, {왼,위}
+static int[][] dArr4 = {{3,0,2},{3,0,1},{0,2,1},{2,3,1}}; // {위,오,왼}, {위,오,아}, {오,왼,아}, {왼,위,아}
+static int[][] dArr5 = {{0,1,2,3}}; // {오,아,왼,위}
+
+static void cal(Point p, int depth, int[][] backup) {
+    for(int i = 0; i<4; i++) {
+        // dArr1[i] 는 dir(방향)이며, calOut은 주어진 방향에 직진으로 이동하는 함수
+        // cctv 1,3,4 는 4번 회전(방향) 필요하며, cctv2는 2번, cctv1은 1번이다.
+        if(p.cctv == 1) { // 4번 회전
+            calOut(p, dArr1[i]); 
+        }else if(p.cctv == 2) { // 2번 회전
+            if(i>1) continue; 
+            calOut(p, dArr2[i][0]);
+            calOut(p, dArr2[i][1]);
+        }else if(p.cctv == 3) { // 4번 회전
+            calOut(p, dArr3[i][0]);
+            calOut(p, dArr3[i][1]);
+        }else if(p.cctv == 4) { // 4번 회전
+            calOut(p, dArr4[i][0]);
+            calOut(p, dArr4[i][1]);
+            calOut(p, dArr4[i][2]);
+        }else if(p.cctv == 5) { // 1번 회전 (=회전 안함)
+            if(i>0) continue; 
+            calOut(p, dArr5[i][0]);
+            calOut(p, dArr5[i][1]);
+            calOut(p, dArr5[i][2]);
+            calOut(p, dArr5[i][3]);
+        }
+        dfs(depth+1); // 다음 cctv 이동
+        // backtracking
+        for (int k = 0; k < N; k++) {
+            for (int l = 0; l < M; l++) {
+                outArr[k][l] = backup[k][l];
+            }
+        }
+    }
+}
+
+static void dfs(int depth) {
+    // base condition
+    if(depth == inCCTV.size()) {
+        int num = 0;
+        for(int i = 0; i<N; i++) {
+            for(int j = 0 ;j<M; j++) {
+                if(outArr[i][j] == 0) num++; // 사각지대 구하기;
+            }
+        }
+        result = Math.min(result, num);
+        return;
+    }
+
+    // 현재 depth(cctv개수)에서 배열 상태 매번 새로 복제
+    Point p = inCCTV.get(depth);
+    int[][] backup = new int[10][10];
+    for(int i = 0 ; i<N; i++){
+        for(int j = 0 ; j<M; j++) {
+            backup[i][j] = outArr[i][j];
+        }
+    }
+    // recursion
+    cal(p, depth, backup);
+}
 ```
 
 **트리를 참고해보자**
 
--> 주말에 사진!! 코드도 함께!!
+<img src="https://github.com/BH946/bh946.github.io/assets/80165014/33c547a4-c9d0-4f22-80ac-ca60e2dc39ef" alt="image" style="zoom: 33%;" /> 
 
 <br><br>
 
