docs: 템플릿 수정

--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -48,7 +48,8 @@ typora-root-url: ../../..
 - 복잡도?? 너무 크거나 나머지 상황은 DP, 그리디 등으로 접근
   - **DP 여러가지 유형** 미리 익숙해두자
 - 아래 **자료구조** 정도는 기억해두고 필요한지 판단해서 사용하자
-  - 스택&큐&덱, 이분탐색, 해시맵, 우선순위 큐
+  - 스택&큐&덱, 이분탐색, 해시맵, 우선순위 큐 -> 사용법 기억
+  - `binarySearch, lower_bound, upper_bound` **직접 구현 방법 기억**
 
 
 <br>
@@ -1583,12 +1584,21 @@ while(num != 0) {
 **정렬되어 있는 배열에서 특정 데이터를 찾기 위해 모든 데이터를 탐색 범위를 절반으로 줄여가며 찾는 탐색 방법**
 
 *  **`Arrays.binarySearch(arr, target)` 함수를 활용** : 찾는 수가 등장했는지 안했는지를 이분탐색으로 알려줌(**오름차순에** 사용)
-  * 물론, `sort` 처럼 범위 지정할 수 있다.
-  * **단, `parametric search` 관련해서 구하려면 직접 `binarySearch` 를 작성 해줘야 한다.**
+  *  찾으면 해당 index를 반환하고, 못찾으면 -?을 반환한다. (조금 특이함)
+     *  못찾을때 : 찾는수보다 큰 최초의 위치(index)를 찾아서 -1을 곱하고 1을 빼서 반환한다.
+     *  아래코드 주석 참고
+  
+  *  물론, `sort` 처럼 범위 지정할 수 있다.
+  *  **단, `parametric search` 관련해서 구하려면 직접 `binarySearch` 를 작성 해줘야 한다.**
+  
+*  분할정복처럼 `st, en, mid` 인덱스 활용하며 `mid=(st+en)/2` 가 기본
+  *  크기가 홀수, 짝수일 때 mid의 값이 다른게 정상인데 (예로 1,2,3,4 에서 중간값은? 애매)  
+    이를 신경쓸 필요가 없다. 
+    *  중간위치가 조금 다르더라도 결과 구하는데는 전혀 지장없고 속도도 거의 지장없다.
 
-* 분할정복처럼 `st, en, mid` 인덱스 활용하며 `mid=(st+en)/2` 가 기본
-  * 반드시 st,en을 1차이 나게끔 0,1로 가정하던지 해서 무한루프에 빠지는지 체크도 중요!!
+  *  반드시 st,en을 1차이 나게끔 0,1로 가정하던지 해서 무한루프에 빠지는지 체크도 중요!!
     * **무한루프에 빠지게 되는경우 `mid=(left+right+1)/2` 사용을 권장**
+
 
 <br>
 
@@ -1597,17 +1607,19 @@ while(num != 0) {
 ```java
 int[] arr = {2, 5, 8, 12, 16, 23, 38, 56, 72, 91};
 int target = 23;
-System.out.println(Arrays.binarySearch(arr, target)); // 5 반환 (없으면 음수값 반환)
+int target1 = 17;
+System.out.println(Arrays.binarySearch(arr, target)); // 5 반환
+System.out.println(Arrays.binarySearch(arr, target1)); // -6 반환 (=5*(-1)-1)
 
 // EX : BOJ 1920
 // input
 // 생략...
 
-// run & output
+// run & output -> nlogn 또는 mlogn 
 StringBuilder sb = new StringBuilder();
-Arrays.sort(inArr1, 0, N); // ASC (범위지정)
+Arrays.sort(inArr1, 0, N); // ASC (범위지정 가능)
 for(int i = 0 ; i<M;i++){
-    int findIndex = Arrays.binarySearch(inArr1, 0, N, inArr2[i]); // (범위지정)
+    int findIndex = Arrays.binarySearch(inArr1, 0, N, inArr2[i]); // (범위지정 가능)
     if(findIndex<0) sb.append(0).append('\n');
     else sb.append(1).append('\n');
 }
@@ -1621,38 +1633,45 @@ System.out.println(sb);
 * 이분탐색으로 target의 왼쪽, 오른쪽 위치 구하는 함수 `lower_bound, upper_bound` 는 애초에 java에서 제공하지 않으므로 **직접 구현**해줘야 함
 * **`upper_bound() - lower_bound()` 형태로 중복수의 개수를 구할 수 있다는점**
   * [바킹독님](https://blog.encrypted.gg/985) 의 그림부분을 참고
+  * **lower bound**는 데이터내 특정 K값보다 **같거나 큰값**이 **처음 나오는 위치**를 리턴
+  * **upper bound** 는 K값보다 **처음**으로 **큰 값**이 나오는 위치를 리턴
+  * 중복수 예를 들어보면,
+    * {5,5,5,6} 이 있을 때 lower bound(5)는 0, upper bound(5)는 3 이므로
+    * 3-0=3 으로 중복개수 3개 정답 (5의 중복개수를 구한것)
 
 ```java
-// BOJ 10816
+// BOJ 10816 -> 근데, 문제를 보면 알겠지만 해시로도 풀림 (find가 O(1) 이니까)
+// -> 아래 풀이와 같이 두가지 풀이를 다 알고 있자
 static int n=5;
 static int[] a = {1,2,2,2,3};
+// 분할정복 -> index 활용방식
 public static int binarySearch(int target) {
     int st = 0;
     int en = n-1;
-    while(st <= en) {
+    while(st <= en) { // 찾기위해 '=='까지 포함
         int mid = (st+en)/2;
         if(a[mid] < target) st = mid+1;
         else if(a[mid] > target) en = mid-1;
-        else return mid; // 찾은 경우
+        else return mid; // 찾음
     }
-    return -1; // st > en 의 경우 while문 탈출
+    return -1; // 못찾음
 }
 public static int lower_bound(int target, int len) {
     int st = 0;
     int en = len;
     while(st < en) {
         int mid = (st+en)/2;
-        if(a[mid] < target) st = mid+1;
-        else en = mid; // (a[mid] >= target)
+        if(a[mid] < target) st = mid+1; // target 발견시 st는 그 첫 위치 유지됨
+        else en = mid; // (a[mid] >= target) -> en=mid 반복시 target 끝이 보장됨
     }
-    return st;
+    return st; // 그림보면 알겠지만 결국 'st=mid=en' 이 되므로 en 리턴도 상관없을 거임
 }
 public static int upper_bound(int target, int len) {
     int st = 0;
     int en = len;
     while(st < en) {
         int mid = (st+en)/2;
-        if(a[mid] <= target) st = mid+1;
+        if(a[mid] <= target) st = mid+1; // '초과 값 위치' 구하는게 목표니까 mid+1 한것
         else en = mid; // (a[mid] > target)
     }
     return st;
@@ -1666,13 +1685,15 @@ public static int upper_bound(int target, int len) {
 **나중에 문제를 풀다보면 입력값의 범위는 1에서 10^9 정도로 굉장히 큰데 그거를 배열 인덱스처럼 쓰고 싶을 수 있습니다.   
 그러면 뭔가 크기 순으로 번호를 0번부터 매기고 싶다는 생각이 들텐데 이런 일을 하는게 좌표압축입니다.**
 
-* **좌표압축 방법 : 정렬 -> 중복 제거 -> 이후 이분탐색 수행**
+* **(BOJ 18870 문제 기준) 좌표압축 방법 : 정렬 -> 중복 제거 -> 이후 이분탐색 수행**
   * `List` 로 입출력 한 경우에는 `Set` 으로 **중복제거**하는게 매우 간편
   * 아래 예시 코드는 그냥 앞, 뒤 값 비교해서 **중복제거**
 
 ```java
 //BOJ 18870
-// 좌표압축 : 정렬 -> 중복제거 -> 이분탐색
+//문제에서 "중복제외하고 나보다 작은수가 몇개인가" 를 물어보는중
+//따라서 정렬 및 중복제거후 "이분탐색" 로 구한 위치가 자신보다 작은수의 개수가 됨
+//(결론) 이 문제에서의 좌표압축은?? 정렬 -> 중복제거 -> 이분탐색
 Arrays.sort(inArr, 0, N); // 정렬
 int index = 0;
 for(int i = 0 ; i<N-1;i++){
@@ -1683,6 +1704,8 @@ for(int i = 0 ; i<N-1;i++){
 inArr[index] = inArr[N-1]; // 마지막 원소 넣기
 for(int i = 0 ; i<N;i++){
     sb.append(lower_bound(outArr[i],index+1)); // 이분탐색
+    // lower_bound 말고 binarySearch 도 당연히 가능
+    // 해당 상황에서는 둘다 똑같은 이분탐색 효과 동일
     sb.append(" ");
 }
 System.out.println(sb);
@@ -1710,6 +1733,9 @@ public static int getID(char c) {
 * 이분 탐색으로 투 포인터 문제를 풀던가, 투 포인터 문제를 이분 탐색으로 풀 수 있는 경우가 많다.
 * 예시로 **[수 고르기](https://www.acmicpc.net/problem/2230)** 를 풀어본다.
   * 아래 코드는 2개의 포인터를 적절히 조건에 맞게 움직여서 해를 구하는 모습이다.
+  * 문제 특성상 "두 수의 차이가 M이상" 인 숫자들을 구하는게 중요하므로,
+  * j 가 while문으로 한번에 커져도 그 사이값은 i의 +-M 범위를 벗어나질 않기 때문에,
+  * O(N) 복잡도로 끝날 수 있는 것이다.
 
 ```java
 // BOJ 2230
@@ -1785,7 +1811,7 @@ for(String key : hm.keySet()) {
 // 3. LinkdedHashMap => 값들 HashMap이라 동일하다 가정
 for(String key : hm.keySet()) {				
 	lhm.get(key); // 순서가 보장
-}aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+}
 ```
 
 <br>
