--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -38,6 +38,17 @@ typora-root-url: ../../..
 
 **본인이 생각하는 알고리즘 풀이 과정**
 
+- (추가) **"완탐"**은 조합적 문제에 자주등장 -> "**순조부**(순열,조합,부분집합)"
+  - “순서”가 의미 있는지, 뽑힌 애들의 각 “자리”가 의미 있는지 ⇒ 순열
+  - “순서”가 의미 없는지, 뽑힌 애들의 각 “자리”가 의미 없는지 ⇒ 조합
+    - 즉, “ABC” 와 “BAC” 가 의미있냐? 없으면 `조합`
+    - 사진 참고 : [1/30(화) 알고리즘 - 완전탐색](https://www.notion.so/1-30-02242d871d45442a80d3b4dd896cd66f)
+
+- (추가) 알고리즘 분석할 때 **"완탐"**을 생각할텐데 꼭 간단한 **for문으로 되는지부터 판단**하자!
+  - "규칙"을 찾아 for문으로 간단히 해결,
+  - 재귀할 분기가 딱히 없을때도 간단히 해결,
+  - 순열 조차도 for문으로 표현 가능 -> {1,2,3} 정도 크기에 3중 for문으로 가능
+
 - 무조건 알고리즘 분석할 때 **"종이, 펜 활용"**
   - **"상태트리"** 를 그려보거나 조건에 맞게 **"예제를 풀이"**
   - 타입 범위는 애매하면 무조건 `long`
@@ -50,7 +61,10 @@ typora-root-url: ../../..
 - 아래 **자료구조** 정도는 기억해두고 필요한지 판단해서 사용하자
   - 스택&큐&덱, 이분탐색, 해시맵, 우선순위 큐 -> 사용법 기억
   - `binarySearch, lower_bound, upper_bound` **직접 구현 방법 기억**
-
+  - 우선순위 큐 -> 백준 **나무 재테크** 참고
+    - compareTo 오버라이딩 직접 하는게 빠름
+    - !qu.iseEmpty() 보다 size 미리 구해서 사용이 빠름
+    - 우선순위 큐 최대한 낭비없이 사용 권장
 
 <br>
 
@@ -74,6 +88,26 @@ typora-root-url: ../../..
 - [백트래킹(Backtracking) -> DFS(재귀) 사용중](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EB%B0%B1%ED%8A%B8%EB%9E%98%ED%82%B9backtracking---dfs%EC%9E%AC%EA%B7%80-%EC%82%AC%EC%9A%A9%EC%A4%91)
 - [최단 경로 트리](https://bh946.github.io/baekjoon/(%EB%B0%B1%EC%A4%80_%ED%95%84%EC%88%983)%EC%95%8C%EA%B3%A0%EB%A6%AC%EC%A6%98-%ED%85%9C%ED%94%8C%EB%A6%BF-java/#%EC%B5%9C%EB%8B%A8-%EA%B2%BD%EB%A1%9C-%ED%8A%B8%EB%A6%AC)
 - 나머지... 자유롭게 공부
+
+<br>
+
+**디버깅에 활용 추천 메소드! + 간단한 FileInput**
+
+- 1차원 : `System.out.println(Arrays.toString(inArr));`
+- 2차원 : for문과 `System.out.println(Arrays.toString(inArr[i]));`
+- `System.setIn(new FileInputStream("input.txt"));`
+
+```java
+// 실제로 아래 4줄이 1줄로 줄어듬!
+//for(int j=1; j<=N; j++) {
+//System.out.print(inArr[j]+" ");
+//}
+//System.out.println();
+System.out.println(Arrays.toString(inArr));
+
+// 파입 입출력을 System.in 으로 사용 가능하게 설정
+System.setIn(new FileInputStream("input.txt"));
+```
 
 <br><br>
 
