--- a/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
+++ b/_posts/Coding_Test/Baekjoon_Concept/2023-01-11-(백준_필수3)알고리즘 템플릿 - java.md
@@ -38,6 +38,14 @@ typora-root-url: ../../..
 
 **본인이 생각하는 알고리즘 풀이 과정**
 
+- (추가) **부분집합** -> 문제참고 : [도영이가...](https://www.acmicpc.net/problem/2961)
+  - **"있다 or 없다"** 로 경우의 수를 구하면 -> `부분집합`
+  - power set(=멱집합) : 집합론에서 멱집합은 주어진 집합의 모든 부분 집합들로 구성된 집합
+  - 문제 지문 중에 "적절히 섞어서" 이런 지문을 부분집합으로 해석 가능. WHY??
+  - **<sub>N</sub>C<sub>1</sub>, <sub>N</sub>C<sub>2</sub>, <sub>N</sub>C<sub>3</sub>, ..., <sub>N</sub>C<sub>n</sub>** 이런식으로 탐색하라고 해석 되니까!
+  - 만약 공집합도 포함이면?? <sub>N</sub>C<sub>0</sub> 까지 포함하는 것
+  - **"암기"** -> visited의 T/F 에 해당하는 dfs 재귀 2개 사용
+
 - (추가) **"완탐"**은 조합적 문제에 자주등장 -> "**순조부**(순열,조합,부분집합)"
   - **“순서”**가 의미 있는지, 뽑힌 애들의 각 **“자리”**가 의미 있는지 ⇒ `순열`
     - "중복순열, 중복조합은?" -> 중복이 존재하는것 (EX : 112)
@@ -68,9 +76,9 @@ typora-root-url: ../../..
 - 아래 **자료구조** 정도는 기억해두고 필요한지 판단해서 사용하자
   - 스택&큐&덱, 이분탐색, 해시맵, 우선순위 큐 -> 사용법 기억
   - `binarySearch, lower_bound, upper_bound` **직접 구현 방법 기억**
-  - 우선순위 큐 -> 백준 **나무 재테크** 참고
-    - compareTo 오버라이딩 직접 하는게 빠름 -> `implements Comparable<>`
-    - !qu.iseEmpty() 보다 size 미리 구해서 사용이 빠름
+  - 우선순위 큐 -> 백준 **나무 재테크, 이차원 배열...(17140)** 참고
+    - **compareTo** 오버라이딩 직접 하는게 빠름 -> `implements Comparable<>`
+    - !qu.iseEmpty() 보다 **size** 미리 구해서 사용이 빠름
     - 우선순위 큐 최대한 낭비없이 사용 권장
 
 <br>
@@ -87,11 +95,55 @@ typora-root-url: ../../..
   * `int[][] backup = new int[10][10];`
   * 이후에 backtracking 에 사용할 수도 있으니 이런 복제도 잘 고려
 * EX6) 2차원 좌표 **구간합** 방식 -> `sum[i-1][j] ` 와 `가로방향(->) 누적값` 과 `inArr[i][j] 현재값`
-  * 즉, `sum[i][j] = sum[i-1][j] + 해당 i행의 가로방향(->) 누적값 + inArr[i][j]`
+  * 즉, `sum[i][j] = sum[i-1][j](바로위) + 해당 i행의 가로방향(->) 누적값 + inArr[i][j]`
 * EX7) 2차원 "**달팽이**"처럼 빙글빙글 돌때 **"범위체크+visited"**로 간단히 구현 가능하다.
-  * 좌표 원복하고 방향 전환하는 형식이 될 것이다.
+  * **좌표 원복**하고 방향 전환하는 형식이 될 것이다.
 
+- EX8) "정렬 암기" -> `Long.compare(a.x, b.x) 는 a.x < b.x ? -1 : (a.x==b.x?0:1) 와 동일`
 
+  - (1)우선순위큐 -> 객체 만들때 **Comparable의 compareTo** 오버라이딩
+
+    - `static class Pair implements Comparable<Pair> {}`
+
+  - (2)Arrays, Collections -> **Comparator의 compare** 오버라이딩 방식도 존재 
+
+    - `static class ObjectSort implements Comparator <Integer> {}`
+
+    - ```java
+      ObjectSort ob = new ObjectSort();
+      Arrays.sort(inArr, ob); // ob 대신 "람다식"으로도 바로 가능
+      Collections.sort(inArr, (o1,o2)->o1.itemId - o2.itemId); //"lambda"
+      ```
+
+- EX9) **"빈도수"** 구할때 List[] 도 있지만, **HashMap** 에 담으려 노력해보자 (자료구조 활용)
+
+  - `Map<Integer, Integer> map = new HashMap<>(); // <number, count>`
+  - `hm.put("java", hm.getOrDefault("java", 0)+1);` -> put, get 함수 기억
+
+- EX10) **슬라이딩 윈도우 알고리즘 (Sliding Window)**
+
+  - [DNA 비밀번호](https://www.acmicpc.net/problem/12891) -> 참고 문제
+
+  - **맨 앞 문자는 제거, 새문자가 맨 뒤에 추가** -> 이 문장이 핵심 알고리즘 로직이다.
+
+    ```java
+    // ex: dna[]는 "AAACGCTT" 같은 문자열 배열
+    // cnt -> A,C,G,T
+    static void solve() { 
+        // 맨 앞 P개 처리
+        for(int i=0; i<P; i++) cnt[ dna[i]-'A' ]++;
+        check();
+        // P 이후 한 개씩 처리
+        // 이전 P개 중 "맨 앞 문자는 제거, 새문자가 맨 뒤에 추가"
+        for(int i=P; i<S; i++) {
+            // 맨 앞 (제거)
+            cnt[ dna[i-P]-'A' ]--;
+            // 맨 뒤 (새로운) (추가)
+            cnt[ dna[i]-'A' ]++;
+            check();
+        }
+    }
+    ```
 
 <br>
 
@@ -449,6 +501,53 @@ while(value != 0) { // ex : 123 -> 12 -> 1 -> 0
 str.substring(3,5); String[] arr = str.split(""); // String의 경우
 Arrays.copyOfRange(원본배열, 시작, 끝); // 배열의 경우
 ```
+
+<br><br>
+
+## 순.조.부 + 비트 연산
+
+순열, 조합, 부분집합 -> 노션확인
+
+**부분집합은 조합과 유사하다.**
+
+- 집합에 포함된 원소들을 “선택”하는 것이다.
+- 다수의 중요 알고리즘들이 원소들의 그룹에서 최적의 부분 집합을 찾는 것이다.(예:냅색)
+
+```java
+//부분집합 로직 "암기"
+if(depth == N)
+    부분집합 완성
+else
+    visited[depth] = true;
+	dfs(depth+1);
+    visited[depth] = false;
+	dfs(depth+1);
+```
+
+<br>
+
+**bit mask -> visited를 대체하는것!**
+
+- 참고 : 비트 시프트 연산의 출력값을 간단히 계산 : 2^k 로 생각
+  - 2 << 3 이면 2*2^3
+  - 2 >> 3 이면 2/2^3
+- & : 특정 자리가 0인지 1인지 확인하고 싶을때 사용
+- << : 자리(크기) 역할
+- | : 특정 자리를 1로 변경
+- EX : `(i & (1<<j)) != 0`
+  - `1<<j` 는 인덱스 역할
+  - i비트의 1<<j 번째를 & 연산으로 1인지 확인하는 것
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/a9d48972-f408-4a67-8d02-2422bb545a9a) 
+
+<br>
+
+**binary counting은 2진수로 표현 가능한 경우의 수 → for문으로**
+
+- {1, 3, 5, 6, 9} 가 있을때 이것의 모든 부분집합을 아래의 2진수로 표현이 가능!!
+- 00000 ~ 11111 : 총 2^5로 32개(공집합 포함) 가지수
+
+![image](https://github.com/BH946/bh946.github.io/assets/80165014/27004f8c-9fdc-4560-b5d1-8ff031ee1c87) 
 
 <br><br>
 
@@ -1361,7 +1460,7 @@ static int[] order = {3,1,5};
 static Integer[] inArr = {1,2,0};
 public static void main(String[] args) {
     ObjectSort ob = new ObjectSort();
-    Arrays.sort(inArr, ob);
+    Arrays.sort(inArr, ob); // ob 대신 람다식으로도 바로 가능
 
     System.out.println(Arrays.toString(inArr));
     // 출력 : [1, 0, 2]
